Add runtime dependencies