@@ -32,33 +32,25 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
 
-    implementation files('lib/jsoup-1.8.1.jar')
-    implementation files('lib/marytts-builder-5.2-jar-with-dependencies.jar')
-    implementation files('lib/httpclient-4.3.6.jar')
-    implementation files('lib/commons-configuration-1.7.jar')
-    implementation files('lib/httpmime-4.3.3.jar')
-    implementation files('lib/httpcore-4.3.3.jar')
-    implementation files('lib/gson-2.6.2.jar')
-    implementation files('lib/guava-22.0.jar')
-    implementation files('lib/commons-logging-1.1.1.jar')
-    implementation files('lib/commons-lang-2.6.jar')
-    implementation files('lib/estimAPI.jar')
-    implementation files('lib/json-20140107.jar')
-    implementation files('lib/commons-collections-3.2.1.jar')
-    implementation files('lib/voice-dfki-prudence-hsmm-5.2.jar')
-    implementation files('lib/marytts-lang-en-5.2.jar')
+    implementation fileTree('lib') { include '*.jar' }
+    implementation fileTree('javafx-sdk-15.0.1/lib') { include '*.jar' }
 
-    implementation files('javafx-sdk-15.0.1/lib/javafx-swt.jar')
-    implementation files('javafx-sdk-15.0.1/lib/javafx.graphics.jar')
-    implementation files('javafx-sdk-15.0.1/lib/javafx.swing.jar')
-    implementation files('javafx-sdk-15.0.1/lib/javafx.controls.jar')
-    implementation files('javafx-sdk-15.0.1/lib/javafx.base.jar')
-    implementation files('javafx-sdk-15.0.1/lib/javafx.fxml.jar')
-    implementation files('javafx-sdk-15.0.1/lib/javafx.media.jar')
-    implementation files('javafx-sdk-15.0.1/lib/javafx.web.jar')
+    runtimeOnly fileTree('lib') { include '*.jar' }
+    runtimeOnly fileTree('javafx-sdk-15.0.1/lib') { include '*.jar' }
 }
 
 application {
     // Define the main class for the application.
-    mainClassName = 'TeaseAIJava.App'
+    mainClassName = 'me.goddragon.teaseai.TeaseAI'
 }
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', 'javafx-sdk-15.0.1/lib',
+                '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.media,javafx.graphics,javafx.swing,javafx.web'
+        ]
+    }
+}
+
+
